--- a/Kompliant/packages.config
+++ b/Kompliant/packages.config
@@ -2,5 +2,11 @@
 <packages>
   <package id="AngularJS.Core" version="1.3.4" targetFramework="net45" />
   <package id="bootstrap" version="3.3.1" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.2" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
 </packages>
